--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,12 +20,12 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '17'
-        distribution-type: 'adopt'
+        distribution-type: 'temurin'
 
     - name: Build Java Game
       run: |
         # Assuming your game's entry point is Main.java and the package is com.example.game
-        javac -source 1.8 -target 1.8 src/com/vulps/main/*.java
+        javac -source 17 -target 17 src/com/vulps/main/*.java
 
   release:
     runs-on: ubuntu-latest
