--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,6 +26,11 @@ jobs:
       run: |
         # Assuming your game's entry point is Main.java and the package is com.example.game
         javac -source 17 -target 17 src/com/vulps/main/*.java
+        
+    - name: Package JAR
+      run: |
+        cd build
+        jar cvf mygame.jar .
 
   release:
     runs-on: ubuntu-latest
