--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build Java Game
       run: |
         # Assuming your game's entry point is Main.java and the package is com.example.game
-        javac -source 17 -target 17 src/com/vulps/main/*.java
+        javac -source 17 -target 17 -d build src/com/vulps/main/*.java
         
     - name: Package JAR
       run: |
