--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,7 +30,7 @@ jobs:
         mkdir -p build
         cp src/META-INF/MANIFEST.MF build/
         cp -R src/resources build/
-        jar cvfm mygame.jar build/MANIFEST.MF -C build .
+        jar cvfm vortex-evader.jar build/MANIFEST.MF -C build .
 
 
     - name: Upload Artifacts
