--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,6 +52,7 @@ jobs:
         # GNU unzip tends to not set the executable bit even though it's set in the .zip
         chmod +x butler
         # just a sanity check run (and also helpful in case you're sharing CI logs)
+        echo "API_KEY=$BUTLER_API_KEY" >> $GITHUB_ENV
         ./butler -V
 
     - name: Download Artifacts
